--- a/admin-todos-nextjs15/package.json
+++ b/admin-todos-nextjs15/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.2.1",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^5.1.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
