Added relations on prisma for users todo

--- a/admin-todos-nextjs15/.env.template
+++ b/admin-todos-nextjs15/.env.template
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+DATABASE_URL="postgresql://user:password@localhost:5432/dbname"
 NEXTAUTH_SECRET=
 GITHUB_ID=
 GITHUB_SECRET=
